# ROS

./: .gitignore  README.CH.md  README.EN.md  README.md  TODO
src/: CMakeLists.txt
src/elite_controller/: CMakeLists.txt  package.xml  setup.py
src/elite_controller/config/: ec612.yaml  ec66.yaml
src/elite_controller/launch/: elite_controller.launch
src/elite_controller/scripts/: elite_controller_node.py
src/elite_controller/src/elite_controller/: elite_controller.py  interpolate_five.py  joint_trajectory_action.py
src/elite_description/: CMakeLists.txt  package.xml
src/elite_description/config/: urdf.rviz
src/elite_description/launch/: display_ec612.launch  display_ec63.launch  display_ec66.launch
src/elite_description/meshes/ec612/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
src/elite_description/meshes/ec63/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
src/elite_description/meshes/ec66/: base_link.STL  flan.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
src/elite_description/urdf/: ec612_description.urdf  ec63_description.urdf  ec66_description.urdf
src/elite_description/urdf/dae/: ikfast-ec66  ikfastec66.cpp
src/elite_description/urdf/gazebo/: ec612_description.urdf  ec63_description.urdf  ec66_description.urdf
src/elite_driver/: CMakeLists.txt  README.md  package.xml  setup.py
src/elite_driver/config/: ec612_driver.yaml  ec63_driver.yaml  ec66_driver.yaml
src/elite_driver/launch/: elite_driver.launch
src/elite_driver/scripts/: elite_driver_node.py
src/elite_driver/src/elite_driver/: cart_move.py  elite_driver.py  fake_ec.py  forward_kinematic.py  inverse_kinematic.py  joint_move.py  joint_states.py  joint_trajectory_move.py  joint_trajectory_movel.py  robot_servo_on.py  robot_state.py  set_analog_io.py  set_digital_io.py  stop_move.py
src/elite_driver/tests/: test_cart_move.py  test_elite_driver.py  test_forward_kinematic.py  test_inverse_kinematic.py  test_joint_move.py  test_joint_states.py  test_joint_trajectory_move.py  test_robot_servo_on.py  test_robot_state.py  test_set_analog_io.py  test_set_digital_io.py  test_stop_move.py
src/elite_example/: package.xml
src/elite_example/elite_example_control/: CMakeLists.txt  package.xml
src/elite_example/elite_example_control/scripts/: example01_joint_move.py  example02_cart_move.py  example03_compute_ik.py
src/elite_example/elite_example_control/src/elite_example_control/: example01_joint_move.cpp  example02_cart_move.cpp  example03_cart_move_with_constrain.cpp  example04_trajectory_move.cpp
src/elite_example/elite_example_custom_planner/: CMakeLists.txt  package.xml
src/elite_example/scripts/: example02_cart_move.py  example10_all.py
src/elite_gazebo/: CMakeLists.txt  package.xml
src/elite_gazebo/config/ec612/: ec612_controllers.yaml
src/elite_gazebo/launch/: ec612_gazebo.launch  ec63_gazebo.launch  ec66_gazebo.launch  elite_gazebo.launch
src/elite_moveit/: CMakeLists.txt  package.xml
src/elite_moveit/launch/: elite_moveit.launch
src/elite_moveit_ikfast_plugins/elite_moveit_ikfast_plugin_ec66/: CMakeLists.txt  ec66_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/elite_moveit_ikfast_plugins/elite_moveit_ikfast_plugin_ec66/src/: ec66_manipulator_ikfast_moveit_plugin.cpp  ec66_manipulator_ikfast_solver.cpp
src/elite_msgs/: CMakeLists.txt  package.xml
src/elite_msgs/msg/: RobotState.msg
src/elite_msgs/srv/: CartMove.srv  ForwardKinematic.srv  InverseKinematic.srv  JointMove.srv  JointTrajectoryMove.srv  SetAnalogIO.srv  SetIO.srv
src/moveit_config/ec612_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_config/ec612_moveit_config/config/: ec612.srdf  joint_limits.yaml  simple_moveit_controllers.yaml
src/moveit_config/ec612_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/moveit_config/ec63_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_config/ec63_moveit_config/config/: ec63.srdf  fake_controllers.yaml  joint_limits.yaml
src/moveit_config/ec63_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.launch  moveit_real.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/moveit_config/ec66_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_config/ec66_moveit_config/config/: ec66.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
src/moveit_config/ec66_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
tools/: 00_auto_install.sh  01_depends_install.sh  02_source_rosws_env.sh
